fixes for modal on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -32,12 +32,22 @@ a:hover {
   justify-content: space-around;
 
 }
-
+.modal-content {
+  width: 650px;
+}
+.modal-backdrop.show {
+  width: 660px;
+  height: 1128px;
+}
 body {
   display: flex;
   position:absolute;
   z-index:  -2;
   margin: 0;
+  width: 660px;
+}
+.modal-open{
+  padding-right: 0px;
 }
 .btn-group-lg>.btn, .btn-lg {
   width: 210px;
